slashies-macros/tests/command/e07_invalid_sub_command_name.stderr
error: Invalid "name" attribute
  --> tests/command/e07_invalid_sub_command_name.rs:10:5
   |
10 |     #[name]
   |     ^^^^^^^
